# SwingTech-1

./: .gitignore  CMakeLists.txt  README.md  main.cpp
engine/: CMakeLists.txt  CMakeSettings.json  main.cpp
engine/Scripts/: Vector2.lua
engine/demo/: DataStructureTest.cpp  STSample.cpp  demo_main.cpp
engine/include/SDL2/: SDL_config.h
engine/include/detail/: LuaHelpers.h
engine/lib/windows/MSVC/: Bullet2FileLoader.lib  Bullet3Common.lib  BulletInverseDynamics.lib  BulletSoftBody.lib  GIMPACTUtils.lib  LinearMath.lib  SDL2.lib  SDL2main.lib  assimp-vc140-mt.lib  glew32.lib  glew32s.lib  lua.lib  lua53.lib
engine/lib/windows/vulkan/: VkLayer_api_dump.lib  VkLayer_core_validation.lib  VkLayer_device_simulation.lib  VkLayer_monitor.lib  VkLayer_object_tracker.lib  VkLayer_parameter_validation.lib  VkLayer_screenshot.lib  VkLayer_threading.lib  VkLayer_unique_objects.lib  VkLayer_utils.lib
engine/src/: Input.cpp  Input.h  STAssetManager.cpp  STAssetManager.h  STComponent.h  STEntity.cpp  STEntity.h  STEventComponent.cpp  STEventComponent.h  STGame.cpp  STGame.h  STGameState.cpp  STGameState.h  STGlobal.h  STGraphicsComponent.cpp  STGraphicsComponent.h  STMesh.h  STMeshComponent.cpp  STMeshComponent.h  STRectBoundsComponent.h  STResourceManager.h  STSceneManager.cpp  STSceneManager.h  STScriptComponent.cpp  STScriptComponent.h  SwingTech1.h  docConfig
engine/src/Application/: Input.cpp  Input.h  STAssetManager.cpp  STAssetManager.h  STGame.cpp  STGame.h  STGameState.cpp  STGameState.h  STSceneManager.cpp  STSceneManager.h
engine/src/Application/Util/: STDebug.h  STJson.h
engine/src/Entity/: STActor.cpp  STActor.h  STCamera.cpp  STCamera.h  STEntity.cpp  STEntity.h  STLight.cpp  STLight.h  Transform.cpp  Transform.h
engine/src/Entity/Components/: ST3DAnimationComponent.cpp  ST3DAnimationComponent.h  ST3DPhysicsComponent.cpp  ST3DPhysicsComponent.h  STAABBComponent.cpp  STAABBComponent.h  STBoundsComponent.h  STCameraComponent.cpp  STCameraComponent.h  STComponent.cpp  STComponent.h  STEventComponent.cpp  STEventComponent.h  STGraphicsComponent.cpp  STGraphicsComponent.h  STLightComponent.cpp  STLightComponent.h  STMeshComponent.cpp  STMeshComponent.h  STRectBoundsComponent.cpp  STRectBoundsComponent.h  STRendererComponent.cpp  STRendererComponent.h  STScriptComponent.cpp  STScriptComponent.h  STShadowComponent.cpp  STShadowComponent.h  STSpriteComponent.cpp  STSpriteComponent.h
engine/src/Entity/Util/: GLSLPreprocessor.h  STMesh.cpp  STMesh.h
engine/src/Graphics/: Camera.cpp  Camera.h  STColor.h  STFontMetrics.h  STGraphics.cpp  STGraphics.h  STMaterial.cpp  STMaterial.h  STRenderer.cpp  STRenderer.h  Shader.cpp  Shader.h  Texture.h
engine/src/Graphics/GL/: GLGraphics.cpp  GLGraphics.h  GLMesh.cpp  GLMesh.h  GLRenderer.cpp  GLRenderer.h  GLShader.cpp  GLShader.h  GLSkinnedMesh.cpp  GLSkinnedMesh.h  GLTexture.cpp  GLTexture.h
engine/src/Graphics/Interface/: STButton.cpp  STButton.h  STButtonGroup.cpp  STButtonGroup.h  STEntry.cpp  STEntry.h  STInterWidget.h  STLabel.cpp  STLabel.h  STMenu.cpp  STMenu.h  STPanel.cpp  STPanel.h
engine/src/Graphics/VK/: VKGraphics.cpp  VKGraphics.h  VKMesh.cpp  VKMesh.h  VKShader.cpp  VKShader.h
engine/src/Math/: Euler.h  Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  STCore.h  STMath.h  Transform.cpp  Transform.h  Vector.cpp  Vector.h  Vertex.h
engine/src/Math/2D Bounds/: BoundRect.h  BoundShape.h
engine/src/Math/Shape/: BoundingBox.h  Cube.h  Quad.h  Rect.h  Shape.h
engine/src/Physics/: STPhysics.cpp  STPhysics.h  STRigidBody.h
engine/src/Physics/Bullet/: BulletPhysics.cpp  BulletPhysics.h  BulletRigidBody.cpp  BulletRigidBody.h  BulletRigidBodyShape.cpp  BulletRigidBodyShape.h
engine/src/Shader/: basic.fsh  basic.vsh
engine/src/Util/: STJson.h
ext/detail/: LuaHelpers.h
src/: Input.cpp  Input.h  SComponent.cpp  SComponent.h  SGameState.cpp  SGameState.h  STComponent.h  STEntity.cpp  STEntity.h  STEventComponent.cpp  STEventComponent.h  STGame.cpp  STGame.h  STGameState.h  STGlobal.h  STGraphicsComponent.cpp  STGraphicsComponent.h  STLight.h  STMesh.h  STMeshComponent.cpp  STMeshComponent.h  STResourceManager.cpp  STResourceManager.h  STSceneManager.h  STScriptComponent.cpp  STScriptComponent.h  STechGlobal.h  STechWindow.cpp  STechWindow.h  docConfig
src/Graphics/: Camera.cpp  Camera.h  STColor.h  STGraphics.cpp  STGraphics.h  STMaterial.h  STechGraphics.cpp  STechGraphics.h  Shader.cpp  Shader.h  Texture.h
src/Graphics/GL/: GLGraphics.cpp  GLGraphics.h  GLMesh.cpp  GLMesh.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h
src/Graphics/Interface/: STInterWidget.h
src/Graphics/VK/: VKGraphics.h
src/Math/: Matrix.h  Quaternion.h  STCore.h  STech_Core.h  Transform.h  Vector.h  Vertex.h
src/Math/Shape/: Cube.h  Quad.h  Rect.h  Shape.h
src/Shader/: basic.fsh  basic.vsh
(+29 files in other folders)
